# stripe_api

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-actions.yml
store/: admin.py  models.py  tests.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_order_tax_discount.py
stripe_demo/: asgi.py  settings.py  wsgi.py
templates/: item_detail.html  items.html  order_detail.html
